--- a/SwipeViewTest/SwipeViewTest/Login.xaml
+++ b/SwipeViewTest/SwipeViewTest/Login.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SwipeViewTest.Login">
+             x:Class="SwipeViewTest.Login"
+             >
     <ContentPage.Content>
         <StackLayout>
             <Button Text="Go back"
